deployment/rca_fault_inject_deployment/virtual-service-delay-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ts-admin-order-service
  namespace: ml-train
spec:
  hosts:
  - ts-admin-order-service
  http:
  - fault:
      delay:
        fixedDelay: 30s
        percentage:
          value: 100
    route:
    - destination:
        host: ts-admin-order-service
  - route:
    - destination:
        host: ts-admin-order-service
