deployment/rca_fault_inject_deployment/virtual-service-error-fault.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ts-admin-travel-service
  namespace: ml-train
spec:
  hosts:
  - ts-admin-travel-service
  http:
  - fault:
      abort:
        httpStatus: 500
        percentage:
          value: 100
    route:
    - destination:
        host: ts-admin-travel-service
  - route:
    - destination:
        host: ts-admin-travel-service
